tests/snapshots/parser_tests__ok_expressions.ast.snap
---
source: tests/parser_tests.rs
expression: json
---
{
  "items": [
    {
      "Function": {
        "name": "main",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "a"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Binary": {
                    "op": "Add",
                    "left": {
                      "Literal": {
                        "Int": 10
                      }
                    },
                    "right": {
                      "Literal": {
                        "Int": 5
                      }
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "b"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Binary": {
                    "op": "Mul",
                    "left": {
                      "Literal": {
                        "Int": 10
                      }
                    },
                    "right": {
                      "Literal": {
                        "Int": 2
                      }
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "d"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Binary": {
                    "op": "And",
                    "left": {
                      "Literal": {
                        "Bool": true
                      }
                    },
                    "right": {
                      "Literal": {
                        "Bool": false
                      }
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "e"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Binary": {
                    "op": "Or",
                    "left": {
                      "Literal": {
                        "Bool": true
                      }
                    },
                    "right": {
                      "Literal": {
                        "Bool": false
                      }
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "g"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Binary": {
                    "op": "Eq",
                    "left": {
                      "Identifier": "a"
                    },
                    "right": {
                      "Identifier": "b"
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "h"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Binary": {
                    "op": "Ne",
                    "left": {
                      "Identifier": "a"
                    },
                    "right": {
                      "Identifier": "b"
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "i"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Binary": {
                    "op": "Lt",
                    "left": {
                      "Identifier": "a"
                    },
                    "right": {
                      "Identifier": "b"
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "j"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Binary": {
                    "op": "Le",
                    "left": {
                      "Identifier": "a"
                    },
                    "right": {
                      "Identifier": "b"
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "k"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Binary": {
                    "op": "Gt",
                    "left": {
                      "Identifier": "a"
                    },
                    "right": {
                      "Identifier": "b"
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "l"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Binary": {
                    "op": "Ge",
                    "left": {
                      "Identifier": "a"
                    },
                    "right": {
                      "Identifier": "b"
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "result"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "max"
                    },
                    "args": [
                      {
                        "Identifier": "a"
                      },
                      {
                        "Identifier": "b"
                      }
                    ],
                    "exec_policy": "normal",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    }
  ]
}
