tests/snapshots/parser_tests__ok_functions_block.ast.snap
---
source: tests/parser_tests.rs
expression: json
---
{
  "items": [
    {
      "Function": {
        "name": "main",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "Expr": {
                "expr": {
                  "Call": {
                    "callee": {
                      "Identifier": "print"
                    },
                    "args": [
                      {
                        "Literal": {
                          "String": "Hello, World!"
                        }
                      }
                    ],
                    "exec_policy": "normal",
                    "type_args": []
                  }
                }
              }
            },
            {
              "Return": {
                "expr": {
                  "Literal": {
                    "Int": 0
                  }
                }
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    },
    {
      "Function": {
        "name": "factorial",
        "type_params": [],
        "params": [
          {
            "pattern": {
              "Identifier": "n"
            },
            "type_ref": {
              "Simple": "number"
            },
            "default": null
          }
        ],
        "return_type": {
          "Simple": "number"
        },
        "body": {
          "stmts": [
            {
              "If": {
                "condition": {
                  "Binary": {
                    "op": "Le",
                    "left": {
                      "Identifier": "n"
                    },
                    "right": {
                      "Literal": {
                        "Int": 1
                      }
                    }
                  }
                },
                "then_branch": {
                  "Block": {
                    "stmts": [
                      {
                        "Return": {
                          "expr": {
                            "Literal": {
                              "Int": 1
                            }
                          }
                        }
                      }
                    ]
                  }
                },
                "else_branch": null
              }
            },
            {
              "Return": {
                "expr": {
                  "Binary": {
                    "op": "Mul",
                    "left": {
                      "Identifier": "n"
                    },
                    "right": {
                      "Call": {
                        "callee": {
                          "Identifier": "factorial"
                        },
                        "args": [
                          {
                            "Binary": {
                              "op": "Sub",
                              "left": {
                                "Identifier": "n"
                              },
                              "right": {
                                "Literal": {
                                  "Int": 1
                                }
                              }
                            }
                          }
                        ],
                        "exec_policy": "normal",
                        "type_args": []
                      }
                    }
                  }
                }
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    },
    {
      "Function": {
        "name": "fetchData",
        "type_params": [],
        "params": [
          {
            "pattern": {
              "Identifier": "url"
            },
            "type_ref": {
              "Simple": "string"
            },
            "default": null
          }
        ],
        "return_type": {
          "Simple": "string"
        },
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "response"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "getData"
                    },
                    "args": [
                      {
                        "Identifier": "url"
                      }
                    ],
                    "exec_policy": "normal",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "Return": {
                "expr": {
                  "Identifier": "response"
                }
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    }
  ]
}
